@@ -1,3 +1,7 @@
+2019-01-08  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* tcpd/libcouriertls.c: Ignore unreadable cert files.
+
 5.0.5
 
 2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>
